lesson3-k8s-Security&Cert/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: monitoring
  # annotations:
  #   nginx.ingress.kubernetes.io/ssl-certificate: "monitoring/tls-secret"
  #   nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
    - hosts:
        - www.myk8s.com
      secretName: tls-secret
  rules:
    - host: www.myk8s.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
          - path: /rancher
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80
